--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -35,6 +35,9 @@
             "manage-specialty": "Manage specialties",
             "handbook": "Handbook",
             "manage-handbook": "Manage handbook"
+        },
+        "doctor": {
+            "manage-schedule": "Manage Doctor's Schedule"
         }
     },
     "manage-user": {
@@ -58,5 +61,11 @@
         "popular-specialties": "Popular specialties",
         "outstanding-medical-facilities": "Outstanding medical facilities",
         "about": "What does the media say?"
+    },
+    "manage-schedule": {
+        "title": "Manage doctor's examination plan",
+        "choose-doctor": "choose a doctor",
+        "choose-date": "choose a date",
+        "save": "Save"
     }
 }
