--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -35,6 +35,9 @@
             "manage-specialty": "Quản lý chuyên khoa",
             "handbook": "Cẩm nang",
             "manage-handbook": "Quản lý cẩm nang"
+        },
+        "doctor": {
+            "manage-schedule": "Quản lý kế hoạch khám bệnh"
         }
     },
     "manage-user": {
@@ -58,5 +61,11 @@
         "popular-specialties": "Chuyên khoa phổ biến",
         "outstanding-medical-facilities": "Cơ sở y tế nổi bật",
         "about": "Truyền thông nói gì ?"
+    },
+    "manage-schedule": {
+        "title": "quản lý kế hoạch của bác sĩ",
+        "choose-doctor": "Chọn bác sĩ",
+        "choose-date": "Chọn ngày",
+        "save": "Lưu"
     }
 }
