--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -67,5 +67,22 @@
         "choose-doctor": "choose a doctor",
         "choose-date": "choose a date",
         "save": "Save"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "schedule",
+            "no-schedule": "Doctors do not have appointments during this time, please choose another time!",
+            "choose": "Choose",
+            "book-free": "and book an appointment (free)"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Create more doctors information",
+            "information": "Introductory information",
+            "select-doctor": "Select doctor",
+            "add": "Create information",
+            "save": "Save information"
+        }
     }
 }
