--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -67,5 +67,22 @@
         "choose-doctor": "Chọn bác sĩ",
         "choose-date": "Chọn ngày",
         "save": "Lưu"
+    },
+    "patient": {
+        "detail-doctor": {
+            "schedule": "lịch khám",
+            "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác!",
+            "choose": "Chọn",
+            "book-free": "và đặt lịch (miễn phí)"
+        }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title": "Tạo thêm thông tin bác sĩ",
+            "information": "Thông tin giới thiệu",
+            "select-doctor": "Chọn bác sĩ",
+            "add": "Tạo thông tin",
+            "save": "Lưu thông tin"
+        }
     }
 }
