--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -74,6 +74,13 @@
             "no-schedule": "Bác sĩ không có lịch hẹn trong thời gian này, vui lòng chọn thời gian khác!",
             "choose": "Chọn",
             "book-free": "và đặt lịch (miễn phí)"
+        },
+        "extra-infor-doctor": {
+            "text-address": "địa chỉ khám: ",
+            "price": "Giá khám:",
+            "detail": "Xem chi tiết",
+            "payment": "Phương thức thanh toán: ",
+            "hide-price": "Ẩn bảng giá"
         }
     },
     "admin": {
