create page manage specialty

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -110,6 +110,9 @@
             "name-clinic": "Tên phòng khám",
             "clinic-address": "Địa chỉ phòng khám",
             "note": "Ghí chú"
+        },
+        "manage-specialty": {
+            "add": "Thêm mới người dùng"
         }
     }
 }
