complete manage specialty ui

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -109,7 +109,9 @@
             "province": "Select province",
             "name-clinic": "Name clinic",
             "clinic-address": "Clinic address",
-            "note": "Note"
+            "note": "Note",
+            "select-specialty": "Select a specialty",
+            "select-clinic": "Choose clinic"
         }
     }
 }
