complete acp schedule booking

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -37,7 +37,8 @@
             "manage-handbook": "Quản lý cẩm nang"
         },
         "doctor": {
-            "manage-schedule": "Quản lý kế hoạch khám bệnh"
+            "manage-schedule": "Quản lý kế hoạch khám bệnh",
+            "manage-patient": "Quản lý lịch khám bệnh"
         }
     },
     "manage-user": {
@@ -116,5 +117,15 @@
         "manage-specialty": {
             "add": "Thêm mới người dùng"
         }
+    },
+    "common": {
+        "confirm": "Xác nhận",
+        "accept": "Đồng ý",
+        "close": "Đóng",
+        "confirm-this-task": "Bạn có chắc chắn thực hiện tác vụ này?",
+        "confirm-delete-user": "Bạn có chắc chắn muốn xóa người dùng này?",
+        "confirm-add-user": "Bạn có muốn thêm người dùng mới?",
+        "confirm-edit-user": "Bạn có muốn chỉnh sửa thông tin người dùng này?",
+        "confirm-save-schedule": "Bạn có muốn lưu lịch khám này không?"
     }
 }
